[SCMOD-5975] Renaming PUT operation
